k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-test-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: todo2.natapat.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-srv
            port:
              number: 5050
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: backend-srv
            port:
              number: 5050
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-srv
            port:
              number: 80
